--- a/styles/architects.css
+++ b/styles/architects.css
@@ -14,6 +14,11 @@
 /* shared Styles */
 .navbar{
     justify-content: space-between;
+    align-items: center;
+}
+.brand-name{
+    font-size: 2.8rem ;
+    font-weight: 600;
 }
 .display-flex{
     display: flex;
@@ -26,6 +31,15 @@
 }
 .bg-light{
     background-color: rgba(255, 144, 14, 0.1);
+}
+.btn-primary{
+    background-color: #ff900e;
+    color: #fff;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border-style: none;
+    border-radius: 8px;
 }
 /* Header Styles */
 
@@ -40,5 +54,33 @@
 .navbar, .banner{
     max-width: 1440px;
     margin: 0 auto;
+}
+/* Banner Related Styles */
+.banner{
+    margin-top: 6.3rem;
+}
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+    margin-bottom: 1.5rem;
+}
+.banner-description{
+    margin-bottom: 1.50rem;
+}
+.banner-image img{
+    width: 100%;
+}
 
+
+/* Responsive Related Styles */
+@media screen and (max-width: 576px) {
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
 }
