--- a/styles/architects.css
+++ b/styles/architects.css
@@ -41,6 +41,13 @@
     border-style: none;
     border-radius: 8px;
 }
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main > section{
+    margin-top: 130px; 
+}
 /* Header Styles */
 
 /* Navbar Related Styles */
@@ -75,8 +82,38 @@
 }
 .banner-image img{
     width: 100%;
+    padding-bottom: 25px;
 }
 
+.teams{
+    justify-content: center;
+    align-items: center;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+}
+
+.our-features{
+    margin-left: 100px;
+    max-width: 530px;
+}
+
+.feature-title{
+    font-size: 2.7rem;
+    font-weight: 700;
+    margin-bottom: 1.25rem;
+}
+#quick-list{
+    font-weight: 600;
+}
+#feature{
+    color: #ff900e;
+}
+.feature-description{
+    margin-bottom: 1.5rem;
+}
 
 /* Responsive Related Styles */
 @media screen and (max-width: 576px) {
