--- a/styles/architects.css
+++ b/styles/architects.css
@@ -116,7 +116,36 @@ main > section{
     margin-bottom: 1.5rem;
 }
 
-
+/* Fact card design */
+.fact-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    margin-top: 100px;
+}
+.fact-card{
+    border: 1px solid #ff900e;
+    width: 240px;
+    height: 240px;
+    text-align: center;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    margin-top: 10px;
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+.fact-description{
+    max-width: 540px;
+}
 
 /* Responsive Related Styles */
 @media screen and (max-width: 576px) {
