--- a/styles/architects.css
+++ b/styles/architects.css
@@ -147,6 +147,7 @@ main > section{
     max-width: 540px;
 }
 
+
 /* Responsive Related Styles */
 @media screen and (max-width: 576px) {
     .navbar, .nav-links,
@@ -158,6 +159,14 @@ main > section{
     }
     .our-features{
         margin-top: 1.5rem;
+    }
+
+    .fact-container{
+        grid-template-columns: repeat(1,1fr);
+        justify-content: center;
+        max-width: 450px;
+        margin: 0 auto;
+        gap: 20px;
     }
 }
 
